--- a/styles.css
+++ b/styles.css
@@ -394,7 +394,7 @@ body {
   width: 100%;
   padding-left: 10px;
   padding-right: 5px;
-  /* margin-top: auto; */
+  margin-top: auto;
   padding-bottom: 0.5rem;
 }
 
